Implement control over Thermostat internal state
