# docs/openapi.yaml
@@ -393,54 +393,48 @@ paths:
           content:
             application/json:
               schema:
-                allOf:
-                  - $ref: "#/components/schemas/AbstractAcessoryInternalState"
-                  - type: object
-                    properties:
-                      targetState:
-                        type: string
-                        nullable: true
-                        enum:
-                          - off
-                          - heat
-                          - cool
-                          - auto
-                      targetTemperature:
-                        type: number
-                        nullable: true
-                      events:
-                        type: array
-                        items:
-                          oneOf:
-                            - type: object
-                              properties:
-                                changedAt:
-                                  type: string
-                                  format: date-time
-                                targetState:
-                                  type: string
-                                  enum:
-                                    - off
-                                    - heat
-                                    - cool
-                                    - auto
-                              required:
-                                - changedAt
-                                - targetState
-                            - type: object
-                              properties:
-                                changedAt:
-                                  type: string
-                                  format: date-time
-                                targetTemperature:
-                                  type: number
-                              required:
-                                - changedAt
-                                - targetTemperature
-                    required:
-                      - targetState
-                      - targetTemperature
-                      - events
+                $ref: "#/components/schemas/ThermostatInternalState"
+    patch:
+      summary: Update Internal State
+      tags:
+        - Thermostats
+        - Internal
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Thermostat ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                currentState:
+                  type: string
+                  enum:
+                    - off
+                    - cold
+                    - heat
+                currentTemperature:
+                  type: number
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ThermostatInternalState"
+        400:
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Bad Request
 
 components:
   schemas:
@@ -454,3 +448,88 @@ components:
       required:
         - id
         - name
+    ThermostatInternalState:
+      allOf:
+        - $ref: "#/components/schemas/AbstractAcessoryInternalState"
+        - type: object
+          properties:
+            currentState:
+              type: string
+              nullable: true
+              enum:
+                - off
+                - heat
+                - cool
+            currentTemperature:
+              type: number
+              nullable: true
+            targetState:
+              type: string
+              nullable: true
+              enum:
+                - off
+                - heat
+                - cool
+                - auto
+            targetTemperature:
+              type: number
+              nullable: true
+            events:
+              type: array
+              items:
+                oneOf:
+                  - type: object
+                    properties:
+                      changedAt:
+                        type: string
+                        format: date-time
+                      currentState:
+                        type: string
+                        enum:
+                          - off
+                          - heat
+                          - cool
+                    required:
+                      - changedAt
+                      - currentState
+                  - type: object
+                    properties:
+                      changedAt:
+                        type: string
+                        format: date-time
+                      currentTemperature:
+                        type: number
+                    required:
+                      - changedAt
+                      - currentTemperature
+                  - type: object
+                    properties:
+                      changedAt:
+                        type: string
+                        format: date-time
+                      targetState:
+                        type: string
+                        enum:
+                          - off
+                          - heat
+                          - cool
+                          - auto
+                    required:
+                      - changedAt
+                      - targetState
+                  - type: object
+                    properties:
+                      changedAt:
+                        type: string
+                        format: date-time
+                      targetTemperature:
+                        type: number
+                    required:
+                      - changedAt
+                      - targetTemperature
+          required:
+            - currentState
+            - currentTemperature
+            - targetState
+            - targetTemperature
+            - events
